Fix background-noise and background image not showing after changing scss output location

--- a/scss/_bkg-noise.scss
+++ b/scss/_bkg-noise.scss
@@ -7,7 +7,7 @@
     height: 100%;
     z-index: -2;
     opacity: 0.15;
-    background-image: url("../assets/images/static-noise.png");
+    background-image: url("assets/images/static-noise.png");
     animation: static 0.5s steps(3, end) infinite;
 }
 
