--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   height: 100%;
   z-index: -2;
   opacity: 0.15;
-  background-image: url("../assets/images/static-noise.png");
+  background-image: url("assets/images/static-noise.png");
   -webkit-animation: static 0.5s steps(3, end) infinite;
           animation: static 0.5s steps(3, end) infinite;
 }
@@ -249,7 +249,7 @@ nav .bkg-noise {
   height: 80px;
   z-index: -1;
   opacity: 0.15;
-  background-image: url("../assets/images/static-noise.png");
+  background-image: url("assets/images/static-noise.png");
   background-size: 150px;
   -webkit-animation: static 0.5s steps(3, jump-both) infinite;
           animation: static 0.5s steps(3, jump-both) infinite;
@@ -328,7 +328,7 @@ nav ul li a:hover::before {
   width: 100%;
   height: 200%;
   opacity: 0.05;
-  background-image: url("../assets/svg/Antikythera-1.svg");
+  background-image: url("assets/svg/Antikythera-1.svg");
   background-size: 70%;
   background-position: top;
   background-repeat: no-repeat;
